--- a/EXWEB46/exSample/WebContent/index.htm
+++ b/EXWEB46/exSample/WebContent/index.htm
@@ -1,4 +1,4 @@
-
+<meta http-equiv="refresh" content="0"; url=/index">
  <html>
  <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <title> 메인 페이지</title>
